force-app/main/default/objects/Shelfwatch_Mapping__c/Shelfwatch_Mapping__c.object-meta.xml
<CustomObject>
    <label>Shelfwatch Mapping</label>
    <nameField>
        <label>Shelfwatch Mapping Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Shelfwatch Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>