force-app/main/default/objects/Shelfwatch_Mapping__c/fields/API_Fail__c.field-meta.xml
<CustomField>
    <fullName>API_Fail__c</fullName>
    <defaultValue>false</defaultValue>
    <label>API Fail</label>
    <type>Checkbox</type>
</CustomField>