force-app/main/default/objects/Shelfwatch_Mapping__c/fields/BatchJobId__c.field-meta.xml
<CustomField>
    <fullName>BatchJobId__c</fullName>
    <label>BatchJobId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>