force-app/main/default/objects/Shelfwatch_Mapping__c/fields/First_Time_Mapping__c.field-meta.xml
<CustomField>
    <fullName>First_Time_Mapping__c</fullName>
    <defaultValue>false</defaultValue>
    <label>First Time Mapping</label>
    <type>Checkbox</type>
</CustomField>