force-app/main/default/objects/Shelfwatch_Mapping__c/fields/Is_Auto_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Auto_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Auto Active</label>
    <type>Checkbox</type>
</CustomField>