force-app/main/default/objects/Shelfwatch_Mapping__c/fields/Optional_Fields__c.field-meta.xml
<CustomField>
    <fullName>Optional_Fields__c</fullName>
    <label>Optional Fields</label>
    <type>TextArea</type>
</CustomField>