force-app/main/default/objects/Shelfwatch_Mapping__c/fields/Required_Fields__c.field-meta.xml
<CustomField>
    <fullName>Required_Fields__c</fullName>
    <label>Required Fields</label>
    <type>TextArea</type>
</CustomField>