force-app/main/default/objects/Shelfwatch_Mapping__c/fields/Retry_From_Id__c.field-meta.xml
<CustomField>
    <fullName>Retry_From_Id__c</fullName>
    <label>Retry From Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>