force-app/main/default/objects/Shelfwatch_Mapping__c/fields/Salesforce_Fields__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Fields__c</fullName>
    <label>Salesforce Fields</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>