force-app/main/default/objects/Shelfwatch_Mapping__c/fields/Shelfwatch_Object__c.field-meta.xml
<CustomField>
    <fullName>Shelfwatch_Object__c</fullName>
    <label>Shelfwatch Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>