force-app/main/default/objects/Shelfwatch_Mapping__c/fields/Total_Processed_Records__c.field-meta.xml
<CustomField>
    <fullName>Total_Processed_Records__c</fullName>
    <label>Total Processed Records</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>