force-app/main/default/objects/Shelfwatch_Mapping__c/fields/Unmapped_Fields__c.field-meta.xml
<CustomField>
    <fullName>Unmapped_Fields__c</fullName>
    <label>Unmapped Fields</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>